Sun Jun 10 22:01:47 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Drop automake requirement to 1.8.3 to allow RPM spec
	  file to work on SLES 9.

Sun Jun 10 21:50:28 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Bump version to 1.0.1.

Fri Jun 08 20:40:00 BST 2007  Olly Betts <olly@survex.com>

	* ruby/docs/examples/: Update to use TermGenerator and QueryParser
	  classes.

Fri Jun 08 20:10:42 BST 2007  Olly Betts <olly@survex.com>

	* ruby/util.i: Add missing rename for TermGenerator::set_document()
	  so it can be used as "tg.document = doc" in Ruby.

Thu Jun 07 01:06:17 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Updated.

Thu Jun 07 01:01:05 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Note new required SWIG SVN rev.

Thu Jun 07 00:58:08 BST 2007  Olly Betts <olly@survex.com>

	* php/docs/examples/: Fix simpleexpand examples to put up to 5
	  documents in the fake RSet as the comments say, not 4 as the
	  code incorrectly did!
	* php/docs/examples/: Fix exception reporting in PHP5 examples.

Thu Jun 07 00:49:23 BST 2007  Olly Betts <olly@survex.com>

	* tcl8/docs/examples/simpleindex.tcl,
	  tcl8/docs/examples/simplesearch.tcl: Update to use TermGenerator
	  and QueryParser, and to more closely match the new C++ versions.
	* tcl8/docs/examples/simpleexpand.tcl: New example to demonstrate
	  relevance feedback, based on C++ simpleexpand.cc.
	* tcl8/docs/bindings.html: Add link to new simpleexpand.tcl example.

Thu Jun 07 00:05:25 BST 2007  Olly Betts <olly@survex.com>

	* php/docs/examples/: Fix missing "\n" in error message when we're run
	  under a non-CLI version of PHP.

Thu Jun 07 00:02:33 BST 2007  Olly Betts <olly@survex.com>

	* tcl8/runtest.tcl: Fix exit handling to work if the called script
	  exits implicitly.

Thu Jun 07 00:00:17 BST 2007  Olly Betts <olly@survex.com>

	* tcl8/docs/bindings.html: Document how constants are wrapped.

Wed Jun 06 23:47:03 BST 2007  Olly Betts <olly@survex.com>
