@@ -1,3 +1,11 @@
+Mon Jun 11 01:11:31 BST 2007  Olly Betts <olly@survex.com>
+
+	* csharp/docs/examples/SimpleIndex.cs,
+	  csharp/docs/examples/SimpleSearch.cs: Update to use QueryParser and
+	  TermGenerator.
+	* csharp/docs/bindings.html: Document explicitly how STEM_SOME, etc
+	  are currently wrapped.  Update GetTermName() reference to GetTerm().
+
 Sun Jun 10 22:01:47 BST 2007  Olly Betts <olly@survex.com>
 
 	* configure.ac: Drop automake requirement to 1.8.3 to allow RPM spec
